BT-139: Fixing radial counetr spacing for Edge.

--- a/apps/community/app/_main/containers/community-text-area/community-text-area.component.scss
+++ b/apps/community/app/_main/containers/community-text-area/community-text-area.component.scss
@@ -1,4 +1,6 @@
-$hashtag-color: rgb(64, 171, 221);
+@import 'colors';
+
+$radial-counter-width: 25px;
 
 .textAreaContainer {
   position: relative;
@@ -17,6 +19,7 @@ $hashtag-color: rgb(64, 171, 221);
   caret-color: black;
   resize: none;
   overflow: hidden;
+  padding-right: $radial-counter-width;
 }
 
 .overlayTextArea {
@@ -25,6 +28,7 @@ $hashtag-color: rgb(64, 171, 221);
   height: 100%;
   top: 2px;
   left: 1px;
+  padding-right: $radial-counter-width;
 }
 
 .suggested-tags {
@@ -35,12 +39,12 @@ $hashtag-color: rgb(64, 171, 221);
 }
 
 button:hover {
-  outline: solid 1px $hashtag-color;
+  outline: solid 1px $community-hashtag-color;
   outline-offset: -2px;
 }
 
 button:focus {
-  outline: solid 2px $hashtag-color;
+  outline: solid 2px $community-hashtag-color;
   outline-offset: -2px;
 }
 
@@ -51,7 +55,7 @@ button:focus {
 }
 
 :host ::ng-deep .hashtag-highlight {
-  color: $hashtag-color;
+  color: $community-hashtag-color;
 }
 
 :host ::ng-deep .link-url {
